--- a/plugin/locale/fi/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fi/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2-plugin-extensions-autobackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: 2016-05-06 14:14+0200\n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: daddelfalk\n"
@@ -14,166 +14,190 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Generator: Poedit 1.8.7\n"
 
-#: ../ui.py:96 ../ui.py:144
+#: ../plugin.py:129
+#, fuzzy
+msgid "Auto backup"
+msgstr "Automaattiset asetukset varmuuskopiolle"
+
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "AutoBackup Asetukset"
 
-#: ../plugin.py:125
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Automaattiset asetukset varmuuskopiolle"
 
-#: ../ui.py:114
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Automaattinen aloitusaika"
 
-#: ../ui.py:221
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr ""
 
-#: ../ui.py:112
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Varmuuskopion hakemisto"
 
-#: ../ui.py:22 ../ui.py:39
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "CF"
 
-#: ../ui.py:120 ../ui.py:355
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Peruuta"
 
-#: ../ui.py:115
-msgid "Create Autoinstall"
-msgstr "Tee Automaattinen asennus"
-
-#: ../ui.py:113
-msgid "Daily automatic backup"
-msgstr "Päivittäinen automaattinen varmuuskopio"
-
-#: ../ui.py:392
-msgid "Deselect"
-msgstr "Poista valinta"
-
-#: ../ui.py:188
-msgid "Disable"
-msgstr "Poista käytöstä"
-
-#: ../ui.py:186
-msgid "Disabled"
-msgstr "Pois käytöstä"
-
-#: ../ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Älä tee automaattista palautusta ensi kerralla"
-
-#: ../ui.py:328
-msgid "Done"
-msgstr "Tehty"
-
-#: ../ui.py:116
-msgid "EPG cache backup"
-msgstr ""
-
-#: ../ui.py:326
-msgid "Failed"
-msgstr "Epäonnistui"
-
-#: ../ui.py:20 ../ui.py:41
-msgid "Harddisk"
-msgstr "Kovalevy"
-
-#: ../ui.py:183
-msgid "Last backup date"
-msgstr "Viimeisen varmuuskopion päiväys"
-
-#: ../ui.py:122
-msgid "Manual"
-msgstr "Manuaalinen"
-
-#: ../ui.py:168
-msgid "No backup present"
-msgstr "Varmuuskopioita ei löydy"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Sopivaa tallennuspaikkaa ei löytynyt, lisää USB tikku, muistikortti tai kovalevy."
-
-#: ../ui.py:109
-msgid "Nowhere"
-msgstr "Ei missään"
-
-#: ../ui.py:121
-msgid "OK"
-msgstr "Ok"
-
-#: ../ui.py:227
-msgid "Remove autoinstall list"
-msgstr ""
-
-#: ../ui.py:228
-msgid "Restore"
-msgstr "Palauta"
-
-#: ../ui.py:220
-msgid "Run a backup now"
-msgstr "Käynnistä varmuuskopiointi nyt"
-
-#: ../ui.py:226
-#, fuzzy
-msgid "Run autoinstall"
-msgstr "Tee Automaattinen asennus"
-
-#: ../ui.py:252 ../ui.py:275 ../ui.py:298
-#, fuzzy
-msgid "Running..."
-msgstr "Käynnissä"
-
-#: ../ui.py:23
-msgid "SD"
-msgstr "SD"
-
-#: ../ui.py:356
-msgid "Save"
-msgstr "Tallenna"
-
-#: ../ui.py:117
-msgid "Save previous backup"
-msgstr ""
-
-#: ../ui.py:394
-msgid "Select"
-msgstr "Valitse"
-
-#: ../ui.py:219
-msgid "Select files to backup"
-msgstr "Valitse varmuuskopioitavat tiedostot"
-
-#: ../ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Valitse varmuuskopioitavat tiedostot/hakemistot"
-
-#: ../ui.py:288
-#, fuzzy, python-format
+#: ../ui.py:312
 msgid ""
-"This will reinstall all plugins from your backup on %s.\n"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
 "Tämä palauttaa varmuuskopiosi %s.\n"
 "Haluatko todella palauttaa nämä asetukset ja uudelleenkäynnistää vastaanottimesi?"
 
-#: ../ui.py:265
-#, python-format
+#: ../ui.py:244
+#, fuzzy
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
 msgstr ""
 "Tämä palauttaa varmuuskopiosi %s.\n"
 "Haluatko todella palauttaa nämä asetukset ja uudelleenkäynnistää vastaanottimesi?"
 
-#: ../ui.py:21
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Tee Automaattinen asennus"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Päivittäinen automaattinen varmuuskopio"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Poista valinta"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Tehty"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr ""
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Epäonnistui"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Kovalevy"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Viimeisen varmuuskopion päiväys"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "Manuaalinen"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Tee Automaattinen asennus"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Varmuuskopioita ei löydy"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Automaattiset asetukset varmuuskopiolle"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Sopivaa tallennuspaikkaa ei löytynyt, lisää USB tikku, muistikortti tai kovalevy."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Ei missään"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "Ok"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Palauta"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr ""
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Palauta"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Käynnistä varmuuskopiointi nyt"
+
+#: ../ui.py:195
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Tee Automaattinen asennus"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+#, fuzzy
+msgid "Running..."
+msgstr "Käynnissä"
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Tallenna"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr ""
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Valitse"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Valitse varmuuskopioitavat tiedostot"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Valitse varmuuskopioitavat tiedostot/hakemistot"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "USB"
 
-#: ../ui.py:36
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr ""
