--- a/plugin/locale/it/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/it/LC_MESSAGES/AutoBackup.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: \n"
@@ -19,164 +19,188 @@ msgstr ""
 "X-Generator: Poedit 1.8.7.1\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: ../ui.py:96 ../ui.py:144
+#: ../plugin.py:129
+#, fuzzy
+msgid "Auto backup"
+msgstr "Backup automatico delle impostazioni"
+
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "Configurazione AutoBackup"
 
-#: ../plugin.py:125
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Backup automatico delle impostazioni"
 
-#: ../ui.py:114
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Orario di inizio dell'avvio automatico"
 
-#: ../ui.py:221
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr "Salvare cache EPG"
 
-#: ../ui.py:112
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Destinazione dei backup"
 
-#: ../ui.py:22 ../ui.py:39
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "Scheda CF"
 
-#: ../ui.py:120 ../ui.py:355
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Annullare"
 
-#: ../ui.py:115
-msgid "Create Autoinstall"
-msgstr "Creare un backup utilizzabile per il ripristino automatico"
-
-#: ../ui.py:113
-msgid "Daily automatic backup"
-msgstr "Backup giornaliero automatico"
-
-#: ../ui.py:392
-msgid "Deselect"
-msgstr "Deselezionare"
-
-#: ../ui.py:188
-msgid "Disable"
-msgstr "Disabilitare"
-
-#: ../ui.py:186
-msgid "Disabled"
-msgstr "Disabilitato"
-
-#: ../ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Non ripristinare in automatico la prossima volta"
-
-#: ../ui.py:328
-msgid "Done"
-msgstr "Fatto"
-
-#: ../ui.py:116
-msgid "EPG cache backup"
-msgstr "Backup della cache EPG"
-
-#: ../ui.py:326
-msgid "Failed"
-msgstr "Non riuscito"
-
-#: ../ui.py:20 ../ui.py:41
-msgid "Harddisk"
-msgstr "Disco rigido"
-
-#: ../ui.py:183
-msgid "Last backup date"
-msgstr "Data ultimo backup"
-
-#: ../ui.py:122
-msgid "Manual"
-msgstr "Manuale"
-
-#: ../ui.py:168
-msgid "No backup present"
-msgstr "Nessun backup presente"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Nessuna unità trovata, inserire una chiavetta USB, scheda flash o disco rigido."
-
-#: ../ui.py:109
-msgid "Nowhere"
-msgstr "Nessuna destinazione"
-
-#: ../ui.py:121
-msgid "OK"
-msgstr "OK"
-
-#: ../ui.py:227
-msgid "Remove autoinstall list"
-msgstr "Rimuovere elenco ripristino automatico"
-
-#: ../ui.py:228
-msgid "Restore"
-msgstr "Ripristinare"
-
-#: ../ui.py:220
-msgid "Run a backup now"
-msgstr "Eseguire un backup adesso"
-
-#: ../ui.py:226
-msgid "Run autoinstall"
-msgstr "Eseguire un ripristino automatico"
-
-#: ../ui.py:252 ../ui.py:275 ../ui.py:298
-msgid "Running..."
-msgstr "In esecuzione..."
-
-#: ../ui.py:23
-msgid "SD"
-msgstr "Scheda SD"
-
-#: ../ui.py:356
-msgid "Save"
-msgstr "Salvare"
-
-#: ../ui.py:117
-msgid "Save previous backup"
-msgstr "Salvare backup precedente"
-
-#: ../ui.py:394
-msgid "Select"
-msgstr "Selezionare"
-
-#: ../ui.py:219
-msgid "Select files to backup"
-msgstr "Selezionare file da salvare"
-
-#: ../ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Selezionare i file e le cartelle da includere nel backup"
-
-#: ../ui.py:288
-#, python-format
+#: ../ui.py:312
 msgid ""
-"This will reinstall all plugins from your backup on %s.\n"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
 "Tutti i plugin saranno reinstallati dal backup su %s.\n"
 "Si desidera veramente reinstallare?"
 
-#: ../ui.py:265
-#, python-format
+#: ../ui.py:244
+#, fuzzy
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
 msgstr ""
 "Il backup sarà ripristinato su %s.\n"
 "Si desidera veramente ripristinare le impostazioni e riavviare?"
 
-#: ../ui.py:21
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Creare un backup utilizzabile per il ripristino automatico"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Backup giornaliero automatico"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Deselezionare"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Fatto"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr "Backup della cache EPG"
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Non riuscito"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Disco rigido"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Data ultimo backup"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "Manuale"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Rimuovere elenco ripristino automatico"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Nessun backup presente"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Backup automatico delle impostazioni"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Nessuna unità trovata, inserire una chiavetta USB, scheda flash o disco rigido."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Nessuna destinazione"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "OK"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Ripristinare"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Rimuovere elenco ripristino automatico"
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Ripristinare"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Eseguire un backup adesso"
+
+#: ../ui.py:195
+msgid "Run autoinstall"
+msgstr "Eseguire un ripristino automatico"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+msgid "Running..."
+msgstr "In esecuzione..."
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "Scheda SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Salvare"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr "Salvare backup precedente"
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Selezionare"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Selezionare file da salvare"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Selezionare i file e le cartelle da includere nel backup"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "Unità USB"
 
-#: ../ui.py:36
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr "root"
