--- a/plugin/locale/bg/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/bg/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ims\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: \n"
@@ -10,119 +10,191 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 2.0.6\n"
 
+#: ../plugin.py:129
 msgid "Auto backup"
 msgstr "Автоматично резервно копие"
 
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "AutoBackup Настройки"
 
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Настройки за Автоматично резервно копие"
 
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Време за автоматичен старт"
 
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr "Резервно копие на EPG кеша"
 
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Местоположение за резервно копие"
 
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "CF"
 
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Отказ"
 
-msgid "Create Autoinstall"
-msgstr "Създаване на Автоматична инсталация"
-
-msgid "Daily automatic backup"
-msgstr "Ежедневно автоматично резервно копие"
-
-msgid "Deselect"
-msgstr "Отмяна Избор"
-
-msgid "Disable"
-msgstr "Спри"
-
-msgid "Disabled"
-msgstr "Спрян"
-
-msgid "Don't auto-restore this next time"
-msgstr "Не възстановявай автоматично това следващия път"
-
-msgid "Done"
-msgstr "Изпълнено"
-
-msgid "EPG cache backup"
-msgstr "EPG кеш резервно копие"
-
-msgid "Failed"
-msgstr "Грешка"
-
-msgid "Harddisk"
-msgstr "Твърд диск"
-
-msgid "Last backup date"
-msgstr "Дата на последното резервно копие"
-
-msgid "Manual"
-msgstr "Ръчно"
-
-msgid "No backup present"
-msgstr "Не е открито резервно копие"
-
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Няма подходящо устройство, необходимо е да поставите флашка или твърд диск."
-
-msgid "Nowhere"
-msgstr "Никъде"
-
-msgid "OK"
-msgstr "Ок"
-
-msgid "Remove autoinstall list"
-msgstr "Изтрий файловете за автоинсталация"
-
-msgid "Restore"
-msgstr "Възстанови"
-
-msgid "Run a backup now"
-msgstr "Направи резервно копие сега"
-
-msgid "SD"
-msgstr "SD"
-
-msgid "Save"
-msgstr "Запази"
-
-msgid "Save previous backup"
-msgstr "Запази предишното резервно копие"
-
-msgid "Select"
-msgstr "Избери"
-
-msgid "Select files to backup"
-msgstr "Изберете файлове за резервно копие"
-
-msgid "Select files/folders to backup"
-msgstr "Изберете файлове/папки за резервно копие"
-
+#: ../ui.py:312
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
+"Do you really want to reinstall?"
 msgstr ""
 "Това ще възстанови вашето резервно копие на %s.\n"
 "Искате ли да възстановите тези настройки и да рестартирате?"
 
+#: ../ui.py:244
+#, fuzzy
+msgid ""
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
+msgstr ""
+"Това ще възстанови вашето резервно копие на %s.\n"
+"Искате ли да възстановите тези настройки и да рестартирате?"
+
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Създаване на Автоматична инсталация"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Ежедневно автоматично резервно копие"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Отмяна Избор"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Изпълнено"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr "EPG кеш резервно копие"
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Грешка"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Твърд диск"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Дата на последното резервно копие"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "Ръчно"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Изтрий файловете за автоинсталация"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Не е открито резервно копие"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Настройки за Автоматично резервно копие"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Няма подходящо устройство, необходимо е да поставите флашка или твърд диск."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Никъде"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "Ок"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Възстанови"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Изтрий файловете за автоинсталация"
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Възстанови"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Направи резервно копие сега"
+
+#: ../ui.py:195
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Изтрий файловете за автоинсталация"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+msgid "Running..."
+msgstr ""
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Запази"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr "Запази предишното резервно копие"
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Избери"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Изберете файлове за резервно копие"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Изберете файлове/папки за резервно копие"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "USB"
 
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr "главна директория"
