--- a/plugin/locale/nl/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/nl/LC_MESSAGES/AutoBackup.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: milo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
@@ -13,164 +13,188 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.3\n"
 
-#: ../ui.py:96 ../ui.py:144
+#: ../plugin.py:129
+#, fuzzy
+msgid "Auto backup"
+msgstr "Automatische reservekopie"
+
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "Autobackup instellingen"
 
-#: ../plugin.py:125
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Automatische reservekopie"
 
-#: ../ui.py:114
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Aanvangstijd automatische backup"
 
-#: ../ui.py:221
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr "Backup EPG-cache"
 
-#: ../ui.py:112
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Kies de locatie voor de backup"
 
-#: ../ui.py:22 ../ui.py:39
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "CF"
 
-#: ../ui.py:120 ../ui.py:355
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Annuleren"
 
-#: ../ui.py:115
-msgid "Create Autoinstall"
-msgstr "Maak een Autoinstall bestand aan"
-
-#: ../ui.py:113
-msgid "Daily automatic backup"
-msgstr "Elke dag automatisch een backup maken"
-
-#: ../ui.py:392
-msgid "Deselect"
-msgstr "Déselecteer"
-
-#: ../ui.py:188
-msgid "Disable"
-msgstr "Déactiveren"
-
-#: ../ui.py:186
-msgid "Disabled"
-msgstr "Uitgeschakeld!"
-
-#: ../ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Zet de backup niet vanzelf terug de volgende keer"
-
-#: ../ui.py:328
-msgid "Done"
-msgstr "Gereed"
-
-#: ../ui.py:116
-msgid "EPG cache backup"
-msgstr "Backup de EPG-cache"
-
-#: ../ui.py:326
-msgid "Failed"
-msgstr "Mislukt"
-
-#: ../ui.py:20 ../ui.py:41
-msgid "Harddisk"
-msgstr "Harde schijf"
-
-#: ../ui.py:183
-msgid "Last backup date"
-msgstr "Datum vorige backup"
-
-#: ../ui.py:122
-msgid "Manual"
-msgstr "Handmatig"
-
-#: ../ui.py:168
-msgid "No backup present"
-msgstr "Geen backup aanwezig"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Geen geschikt medium gevonden, USB stick, CF kaart of harddisk nodig."
-
-#: ../ui.py:109
-msgid "Nowhere"
-msgstr "Nergens"
-
-#: ../ui.py:121
-msgid "OK"
-msgstr "Bevestigen"
-
-#: ../ui.py:227
-msgid "Remove autoinstall list"
-msgstr "Verwijder de AutoInstall lijst"
-
-#: ../ui.py:228
-msgid "Restore"
-msgstr "Herstel de image"
-
-#: ../ui.py:220
-msgid "Run a backup now"
-msgstr "Maak nu een backup"
-
-#: ../ui.py:226
-msgid "Run autoinstall"
-msgstr "Start de AutoInstall"
-
-#: ../ui.py:252 ../ui.py:275 ../ui.py:298
-msgid "Running..."
-msgstr "Loopt"
-
-#: ../ui.py:23
-msgid "SD"
-msgstr "SD"
-
-#: ../ui.py:356
-msgid "Save"
-msgstr "Opslaan"
-
-#: ../ui.py:117
-msgid "Save previous backup"
-msgstr "Sla de vorige backup op"
-
-#: ../ui.py:394
-msgid "Select"
-msgstr "Kies"
-
-#: ../ui.py:219
-msgid "Select files to backup"
-msgstr "Kies de bestanden om te backuppen"
-
-#: ../ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Kies de bestanden en mappen voor de backup"
-
-#: ../ui.py:288
-#, python-format
+#: ../ui.py:312
 msgid ""
-"This will reinstall all plugins from your backup on %s.\n"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
 "De backup wordt teruggezet vanaf %s.\n"
 "Nu herstellen en opnieuw opstarten?"
 
-#: ../ui.py:265
-#, python-format
+#: ../ui.py:244
+#, fuzzy
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
 msgstr ""
 "De backup wordt teruggezet vanaf %s.\n"
 "Nu herstellen en opnieuw opstarten?"
 
-#: ../ui.py:21
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Maak een Autoinstall bestand aan"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Elke dag automatisch een backup maken"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Déselecteer"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Gereed"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr "Backup de EPG-cache"
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Mislukt"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Harde schijf"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Datum vorige backup"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "Handmatig"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Verwijder de AutoInstall lijst"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Geen backup aanwezig"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Automatische reservekopie"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Geen geschikt medium gevonden, USB stick, CF kaart of harddisk nodig."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Nergens"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "Bevestigen"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Herstel de image"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Verwijder de AutoInstall lijst"
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Herstel de image"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Maak nu een backup"
+
+#: ../ui.py:195
+msgid "Run autoinstall"
+msgstr "Start de AutoInstall"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+msgid "Running..."
+msgstr "Loopt"
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Opslaan"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr "Sla de vorige backup op"
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Kies"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Kies de bestanden om te backuppen"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Kies de bestanden en mappen voor de backup"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "USB"
 
-#: ../ui.py:36
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr "root"
