--- a/plugin/locale/ru/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/ru/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ims\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: \n"
@@ -13,167 +13,187 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 1.8.7\n"
 
-#: ../ui.py:96 ../ui.py:144
+#: ../plugin.py:129
+msgid "Auto backup"
+msgstr "Авто бэкап настроек"
+
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "Настройки AutoBackup"
 
-#: ../plugin.py:125
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Автоматический бэкап настроек"
 
-#: ../ui.py:114
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Время автоматического старта"
 
-#: ../ui.py:221
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr "Бекап кеша EPG"
 
-#: ../ui.py:112
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Расположение бэкапа"
 
-#: ../ui.py:22 ../ui.py:39
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "CF"
 
-#: ../ui.py:120 ../ui.py:355
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Отмена"
 
-#: ../ui.py:115
-msgid "Create Autoinstall"
-msgstr "Создать автоинсталляцию"
-
-#: ../ui.py:113
-msgid "Daily automatic backup"
-msgstr "Ежедневный автоматический бэкап"
-
-#: ../ui.py:392
-msgid "Deselect"
-msgstr "Не выбирать"
-
-#: ../ui.py:188
-msgid "Disable"
-msgstr "Отключить"
-
-#: ../ui.py:186
-msgid "Disabled"
-msgstr "Отключен"
-
-#: ../ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Не восстанавливать автоматически в следущий раз"
-
-#: ../ui.py:328
-msgid "Done"
-msgstr "Выполнено"
-
-#: ../ui.py:116
-msgid "EPG cache backup"
-msgstr "Бекап кеша EPG"
-
-#: ../ui.py:326
-msgid "Failed"
-msgstr "Ошибка"
-
-#: ../ui.py:20 ../ui.py:41
-msgid "Harddisk"
-msgstr "Жесткий диск"
-
-#: ../ui.py:183
-msgid "Last backup date"
-msgstr "Дата последнего бэкапа"
-
-#: ../ui.py:122
-msgid "Manual"
-msgstr "В ручную"
-
-#: ../ui.py:168
-msgid "No backup present"
-msgstr "Не найден бэкап"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Нет подходящего устройства, необходимо подключить флешку/карту памяти/жесткий диск."
-
-#: ../ui.py:109
-msgid "Nowhere"
-msgstr "Нигде"
-
-#: ../ui.py:121
-msgid "OK"
-msgstr "Ок"
-
-#: ../ui.py:227
-msgid "Remove autoinstall list"
-msgstr "Удалить файлы автоинсталляции"
-
-#: ../ui.py:228
-msgid "Restore"
-msgstr "Восстановить"
-
-#: ../ui.py:220
-msgid "Run a backup now"
-msgstr "Выполнить бэкап сейчас"
-
-#: ../ui.py:226
-msgid "Run autoinstall"
-msgstr "Запустить автоинсталляцию"
-
-#: ../ui.py:252 ../ui.py:275 ../ui.py:298
-msgid "Running..."
-msgstr "Запущено..."
-
-#: ../ui.py:23
-msgid "SD"
-msgstr "SD"
-
-#: ../ui.py:356
-msgid "Save"
-msgstr "Сохранить"
-
-#: ../ui.py:117
-msgid "Save previous backup"
-msgstr "Сохранить предыдущий бекап"
-
-#: ../ui.py:394
-msgid "Select"
-msgstr "Выбрать"
-
-#: ../ui.py:219
-msgid "Select files to backup"
-msgstr "Выберите файлы для бэкапа"
-
-#: ../ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Выбор файлов/папок для резервного копирования"
-
-#: ../ui.py:288
-#, python-format
+#: ../ui.py:312
 msgid ""
-"This will reinstall all plugins from your backup on %s.\n"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
 "Это переустановит все плагины, доступные на фиде, из Вашего бекапа на %s.\n"
 "Вы действительно хотите выполнить переустановку плагинов?"
 
-#: ../ui.py:265
-#, python-format
+#: ../ui.py:244
+#, fuzzy
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
 msgstr ""
 "Это позволит восстановить резервную копию %s.\n"
 "Вы действительно хотите восстановить эти настройки и сделать рестарт?"
 
-#: ../ui.py:21
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Создать автоинсталляцию"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Ежедневный автоматический бэкап"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Не выбирать"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Выполнено"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr "Бекап кеша EPG"
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Ошибка"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Жесткий диск"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Дата последнего бэкапа"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "В ручную"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Удалить файлы автоинсталляции"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Не найден бэкап"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Автоматический бэкап настроек"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Нет подходящего устройства, необходимо подключить флешку/карту памяти/жесткий диск."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Нигде"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "Ок"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Восстановить"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Удалить файлы автоинсталляции"
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Восстановить"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Выполнить бэкап сейчас"
+
+#: ../ui.py:195
+msgid "Run autoinstall"
+msgstr "Запустить автоинсталляцию"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+msgid "Running..."
+msgstr "Запущено..."
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Сохранить"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr "Сохранить предыдущий бекап"
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Выбрать"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Выберите файлы для бэкапа"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Выбор файлов/папок для резервного копирования"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "USB"
 
-#: ../ui.py:36
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr "root"
-
-msgid "Auto backup"
-msgstr "Авто бэкап настроек"
