--- a/plugin/locale/sk/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/sk/LC_MESSAGES/AutoBackup.po
@@ -7,175 +7,199 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-17 16:09+0200\n"
+"POT-Creation-Date: 2020-05-27 18:54+0200\n"
 "PO-Revision-Date: 2019-02-01 14:31+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: sk_SK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.1\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n>=2 && n<=4 ? 1 : 2);\n"
-"Language: sk_SK\n"
 
-#: ../ui.py:96 ../ui.py:144
+#: ../plugin.py:129
+#, fuzzy
+msgid "Auto backup"
+msgstr "Automatické nastavenie zálohy"
+
+#: ../ui.py:98 ../ui.py:146
 msgid "AutoBackup Configuration"
 msgstr "Konfigurácia AutoBackup"
 
-#: ../plugin.py:125
+#: ../plugin.py:132
 msgid "Automatic settings backup"
 msgstr "Automatické nastavenie zálohy"
 
-#: ../ui.py:114
+#: ../ui.py:116
 msgid "Automatic start time"
 msgstr "Čas automatického spustenia"
 
-#: ../ui.py:221
+#: ../ui.py:194
 msgid "Backup EPG cache"
 msgstr "Zálohovať pamäť programového sprievodcu EPG"
 
-#: ../ui.py:112
+#: ../ui.py:114
 msgid "Backup location"
 msgstr "Umiestnenie zálohy"
 
-#: ../ui.py:22 ../ui.py:39
+#: ../ui.py:24 ../ui.py:41
 msgid "CF"
 msgstr "CF"
 
-#: ../ui.py:120 ../ui.py:355
+#: ../ui.py:122 ../ui.py:363
 msgid "Cancel"
 msgstr "Zrušiť"
 
-#: ../ui.py:115
-msgid "Create Autoinstall"
-msgstr "Vytvoriť autoinštaláciu"
-
-#: ../ui.py:113
-msgid "Daily automatic backup"
-msgstr "Denná automatická záloha"
-
-#: ../ui.py:392
-msgid "Deselect"
-msgstr "Odškrtnúť"
-
-#: ../ui.py:188
-msgid "Disable"
-msgstr "Zakázať"
-
-#: ../ui.py:186
-msgid "Disabled"
-msgstr "Zakázané"
-
-#: ../ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Nabudúce už toto neobnoviť"
-
-#: ../ui.py:328
-msgid "Done"
-msgstr "Hotovo"
-
-#: ../ui.py:116
-msgid "EPG cache backup"
-msgstr "Záloha pamäte EPG"
-
-#: ../ui.py:326
-msgid "Failed"
-msgstr "Neúspešné"
-
-#: ../ui.py:20 ../ui.py:41
-msgid "Harddisk"
-msgstr "Pevný disk"
-
-#: ../ui.py:183
-msgid "Last backup date"
-msgstr "Dátum poslednej zálohy"
-
-#: ../ui.py:122
-msgid "Manual"
-msgstr "Manuálne"
-
-#: ../ui.py:168
-msgid "No backup present"
-msgstr "Žiadna záloha"
-
-#: ../ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Nenájdené vhodné médium. Vložte USB disk, pamäťovú kartu alebo pevný disk."
-
-#: ../ui.py:109
-msgid "Nowhere"
-msgstr "Nikde"
-
-#: ../ui.py:121
-msgid "OK"
-msgstr "Ok"
-
-#: ../ui.py:227
-msgid "Remove autoinstall list"
-msgstr "Odstrániť zoznam automatickej inštalácie"
-
-#: ../ui.py:228
-msgid "Restore"
-msgstr "Obnoviť"
-
-#: ../ui.py:220
-msgid "Run a backup now"
-msgstr "Spustiť zálohovanie"
-
-#: ../ui.py:226
-msgid "Run autoinstall"
-msgstr "Spustiť automatickú inštaláciu"
-
-#: ../ui.py:252 ../ui.py:275 ../ui.py:298
-msgid "Running..."
-msgstr "Beží..."
-
-#: ../ui.py:23
-msgid "SD"
-msgstr "SD"
-
-#: ../ui.py:356
-msgid "Save"
-msgstr "Uložiť"
-
-#: ../ui.py:117
-msgid "Save previous backup"
-msgstr "Uložiť predchádzajúcu zálohu"
-
-#: ../ui.py:394
-msgid "Select"
-msgstr "Zvoliť"
-
-#: ../ui.py:219
-msgid "Select files to backup"
-msgstr "Vybrať súbory na zálohovanie"
-
-#: ../ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Vybrať súbory / zložky na zálohovanie"
-
-#: ../ui.py:288
-#, python-format
+#: ../ui.py:312
 msgid ""
-"This will reinstall all plugins from your backup on %s.\n"
+"Choose a backup.\n"
+"This will delete autoinstall list.\n"
+"Do you really want to continue?"
+msgstr ""
+
+#: ../ui.py:283
+#, fuzzy
+msgid ""
+"Choose a backup.\n"
+"This will reinstall all plugins from your backup.\n"
 "Do you really want to reinstall?"
 msgstr ""
 "Budú preinštalované všetky doplnky zo zálohy na %s.\n"
 "Chcete spustiť reinštaláciu?"
 
-#: ../ui.py:265
-#, python-format
+#: ../ui.py:244
+#, fuzzy
 msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
+"Choose settings backup which should be restored.\n"
+"Do you really want to restore these settings and restart?"
 msgstr ""
 "Bude vykonané obnovenie zo zálohy na %s.\n"
 "Chcete obnoviť tieto nastavenia a reštartovať?"
 
-#: ../ui.py:21
+#: ../ui.py:117
+msgid "Create Autoinstall"
+msgstr "Vytvoriť autoinštaláciu"
+
+#: ../ui.py:115
+msgid "Daily automatic backup"
+msgstr "Denná automatická záloha"
+
+#: ../ui.py:400
+msgid "Deselect"
+msgstr "Odškrtnúť"
+
+#: ../ui.py:251
+msgid "Do you want to restore your settings?"
+msgstr ""
+
+#: ../ui.py:336
+msgid "Done"
+msgstr "Hotovo"
+
+#: ../ui.py:118
+msgid "EPG cache backup"
+msgstr "Záloha pamäte EPG"
+
+#: ../ui.py:334
+msgid "Failed"
+msgstr "Neúspešné"
+
+#: ../ui.py:22 ../ui.py:43
+msgid "Harddisk"
+msgstr "Pevný disk"
+
+#: ../ui.py:169
+msgid "Last backup date"
+msgstr "Dátum poslednej zálohy"
+
+#: ../ui.py:124
+msgid "Manual"
+msgstr "Manuálne"
+
+#: ../ui.py:280 ../ui.py:309
+#, fuzzy
+msgid "No autoinstall list found"
+msgstr "Odstrániť zoznam automatickej inštalácie"
+
+#: ../ui.py:171 ../ui.py:174
+msgid "No backup present"
+msgstr "Žiadna záloha"
+
+#: ../ui.py:241
+#, fuzzy
+msgid "No settings backups found"
+msgstr "Automatické nastavenie zálohy"
+
+#: ../ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Nenájdené vhodné médium. Vložte USB disk, pamäťovú kartu alebo pevný disk."
+
+#: ../ui.py:111
+msgid "Nowhere"
+msgstr "Nikde"
+
+#: ../ui.py:123
+msgid "OK"
+msgstr "Ok"
+
+#: ../ui.py:125
+#, fuzzy
+msgid "Options/Restore"
+msgstr "Obnoviť"
+
+#: ../ui.py:196
+msgid "Remove autoinstall list"
+msgstr "Odstrániť zoznam automatickej inštalácie"
+
+#: ../ui.py:197
+msgid "Restore"
+msgstr "Obnoviť"
+
+#: ../ui.py:193
+msgid "Run a backup now"
+msgstr "Spustiť zálohovanie"
+
+#: ../ui.py:195
+msgid "Run autoinstall"
+msgstr "Spustiť automatickú inštaláciu"
+
+#: ../ui.py:222 ../ui.py:261 ../ui.py:290
+msgid "Running..."
+msgstr "Beží..."
+
+#: ../ui.py:25
+msgid "SD"
+msgstr "SD"
+
+#: ../ui.py:364
+msgid "Save"
+msgstr "Uložiť"
+
+#: ../ui.py:119
+msgid "Save previous backup"
+msgstr "Uložiť predchádzajúcu zálohu"
+
+#: ../ui.py:402
+msgid "Select"
+msgstr "Zvoliť"
+
+#: ../ui.py:192
+msgid "Select files to backup"
+msgstr "Vybrať súbory na zálohovanie"
+
+#: ../ui.py:394
+msgid "Select files/folders to backup"
+msgstr "Vybrať súbory / zložky na zálohovanie"
+
+#: ../ui.py:23
 msgid "USB"
 msgstr "USB"
 
-#: ../ui.py:36
+#: ../ui.py:236 ../ui.py:275 ../ui.py:304
+msgid "from: "
+msgstr ""
+
+#: ../ui.py:38
 msgid "root"
 msgstr "root"
